News Control - Fix - spacing issues between news elements

--- a/MvcWebRole1/Content/custom.css
+++ b/MvcWebRole1/Content/custom.css
@@ -536,11 +536,11 @@ blockquote.quote {
 }
 
 .news-content {
-    width: 700px;
+    width: 94%;
 }
 
 .news-left, .news-right {
-    width: 345px;
+    width: 50%;
 }
 
 .tweet-left, .tweet-right {
@@ -568,6 +568,16 @@ blockquote.quote {
     box-shadow: 0px 0px 25px rgba(0, 0, 255, 0.15);
     background-color: white;
     position: relative;
+    margin-top: 20px;
+}
+
+.width60 .section-title {
+    margin-top: 0px;
+    margin-bottom: 12px;
+}
+
+.width30 .section-title {
+    margin-left: 3%;
 }
 
 .tweet-container .tweet-cell {
@@ -1158,36 +1168,40 @@ blockquote.quote {
     width: 90%;
 }
 
-    .movie-list ul, .critics-container ul, .upcoming-movie-list ul {
+.news-container {
+    width: 100%;
+}
+
+.movie-list ul, .critics-container ul, .upcoming-movie-list ul {
+    float: left;
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    height: 400px;
+}
+
+    .movie-list ul li, .critics-container ul li, .upcoming-movie-list ul li {
         float: left;
         list-style: none;
-        padding: 0px;
-        margin: 0px;
-        width: 100%;
-        height: 400px;
+        width: 20%;
+        margin-right: 3%;
+        min-height: 380px;
+        margin-bottom: 1%;
+        cursor: pointer;
+        text-align: left;
     }
 
-        .movie-list ul li, .critics-container ul li, .upcoming-movie-list ul li {
+    .critics-container ul li {
+        width: 125px;
+        margin-right: 20px;
+        min-height: 100px;
+    }
+
+        .movie-list ul li img, .critics-container ul li img, .upcoming-movie-list ul li img {
             float: left;
-            list-style: none;
-            width: 20%;
-            margin-right: 3%;
-            min-height: 380px;
-            margin-bottom: 1%;
-            cursor: pointer;
-            text-align: left;
+            border: 0px;
         }
-
-        .critics-container ul li {
-            width: 125px;
-            margin-right: 20px;
-            min-height: 100px;
-        }
-
-            .movie-list ul li img, .critics-container ul li img, .upcoming-movie-list ul li img {
-                float: left;
-                border: 0px;
-            }
 
 #reviewer-list img.loading {
     float: left;
@@ -1527,6 +1541,7 @@ blockquote.quote {
 .news-container .news-item .news-content-container .news-right {
     margin-left: 33%;
 }
+
 .news-content-container {
     float: left;
     position: relative;
